# MDness

./: .gitignore  Info.plist  LICENSE  README.md
.github/workflows/: release.yml
MDness/: AppIcon.icns  ContentView.swift  Exporter.swift  HotkeyManager.swift  MDnessApp.swift  MarkdownDocument.swift  MarkdownPreview.swift  MarkdownRenderer.swift  SettingsView.swift
MDness.xcodeproj/: project.pbxproj
MDness.xcodeproj/xcshareddata/xcschemes/: MDness.xcscheme
linux/: PKGBUILD  install.sh  mdness  mdness.desktop
scripts/: make-dmg.sh  make-icon.sh  make-icon.swift
web/: app.js  index.html  mdness.css
windows/: README.md
windows/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
windows/src-tauri/capabilities/: default.json
windows/src-tauri/src/: main.rs
windows/ui/: index.html  shell.css  shell.js
