[package]
name = "mdness"
version = "0.4.1"
description = "A minimal, native Markdown viewer/editor for Windows"
authors = ["David Feher"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
